# pydistill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/pydistill/: __init__.py  cli.py  config.py  extractor.py  models.py  versioning.py
test_project/project_a/appointments/: models.py
test_project/project_a/common/: types.py
test_project/project_a/vehicles/: models.py
tests/: test_cli.py  test_config.py  test_edge_cases.py  test_extractor.py  test_rewriter.py  test_versioning.py
