[project]
name = "pydistill"
version = "0.1.0"
description = "Extract Python models and dependencies into standalone packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.12.5",
]

[project.scripts]
pydistill = "pydistill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydistill"]

[dependency-groups]
dev = [
    "pydantic>=2.0",
    "pytest>=8.0",
    "ruff>=0.14.11",
]
